# isim-raymarcher-raytracer-GPU

./: .gitignore  CMakeLists.txt  README  README.txt
sdl/: CMakeLists.txt  main.cc
src/: CMakeLists.txt  main.cc
src/scene/: camera.cc  camera.hh  pointIntensityComputer.hh  rayCaster.cc  rayCaster.hh  scene.cc  scene.hh
src/scene/light/: light.hh  pointLight.hh
src/scene/material/: checkeredPatternTexture.hh  texture.hh  textureMaterial.hh  uniformTexture.hh
src/scene/objects/: capsule.hh  cube.hh  cylinder.hh  object.hh  plane.hh  sphere.cc  sphere.hh  torus.hh
src/scene/objects/operators/: intersection.hh  subtraction.hh  union.hh
src/types/: colorRGB.hh  coordinate-container.hh  image.hh  point-types.hh  pointn.hh  pointn.hxx  ray.hh  vector-types.hh  vectorn.hh  vectorn.hxx
test/: CMakeLists.txt
